# E-Mail-Monitor

./: .editorconfig  .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
deploy/systemd/: mailflow-monitor.service  mailflow-monitor.timer
src/mailflow_monitor/: __init__.py  __main__.py  cli.py  config.py  imap_client.py  logging_utils.py  models.py  monitor.py  notifications.py  smtp_client.py  state.py
tests/: conftest.py  test_cli.py  test_config.py  test_logging_utils.py  test_message_matching.py  test_monitor.py  test_notifications.py  test_smtp_client.py  test_state.py
